--- a/src/sections/newcontactuspage/create/Create.css
+++ b/src/sections/newcontactuspage/create/Create.css
@@ -51,6 +51,23 @@
 
 }
 
+@media (max-width: 1024px) {
+    .container {
+        width: 40%; /* More compact for small screens */
+        height: 40%;
+        padding: 8px; /* Reduce padding further */
+    }
+
+    #Project {
+        font-size: 1.5em; /* Smaller font size for 425px screens */
+    }
+
+    #btn {
+        width: 85px; /* Smaller button size */
+        height: 22px;
+    }
+}
+
 @media (max-width: 768px) {
 
     .bg{
@@ -58,7 +75,7 @@
     }
     .container {
         width: 50%; /* Wider on smaller screens */
-        height: 35%; /* Allow height to adjust based on content */
+        height: 40%; /* Allow height to adjust based on content */
     }
 }
 
@@ -67,7 +84,6 @@
         width: 65%; /* Even wider on very small screens */
         height: 35%; /* Allow height to adjust based on content */
         padding: 10px; /* Reduce padding */
-        font-size:0.75rem;
     }
 }
 
@@ -82,7 +98,7 @@
 }
 
 #Project{
-    font-size: 2.5em;
+    font-size: 2.0em;
 }
 
 #second{
@@ -104,5 +120,66 @@
     background-color:#4c4efd;
 }
 
+/* Small Screens (up to 425px) */
+@media (max-width: 425px) {
+    .container {
+        width: 80%; /* More compact for small screens */
+        height: 35%;
+        padding: 8px; /* Reduce padding further */
+    }
 
+    #Project {
+        font-size: 1.5em; /* Smaller font size for 425px screens */
+    }
+
+    #btn {
+        width: 85px; /* Smaller button size */
+        height: 22px;
+    }
+}
+
+/* Extra Small Screens (up to 320px) */
+@media (max-width: 320px) {
+    .container {
+        width: 77%; /* Maximize width on very small screens */
+        height: 35%;
+        padding: 5px; /* Minimal padding for extra small screens */
+    }
+
+    #Project {
+        font-size: 1.2em; /* Further reduce font size for tiny screens */
+    }
+
+    #btn {
+        width: 75px; /* Tiny button for very small screens */
+        height: 20px;
+    }
+}
+
+.App {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+/* Default styles for larger screens */
+#Project {
+    font-size: 2.0em;
+}
+
+#btn {
+    width: 110px;
+    height: 30px;
+    border-radius: 5px;
+    color: black;
+    font-family: "Jura", "sans-serif";
+    font-weight: bold;
+}
+
+#btn:hover {
+    background-color: #4c4efd;
+}
 
